[gd_scene load_steps=7 format=3 uid="uid://djug1hgpd6grh"]

[ext_resource type="Theme" uid="uid://d4lygjei3ld2f" path="res://themes/gothic_scenario.tres" id="1_8u74k"]
[ext_resource type="Texture2D" uid="uid://db64uia8i1as4" path="res://scenarios/leipzig/side_st/SideSt-SD.jpg" id="2_8owsn"]
[ext_resource type="Script" path="res://scenarios/leipzig/side_st/SideSt.gd" id="2_qhdan"]
[ext_resource type="PackedScene" uid="uid://bdtq7xo1dfigb" path="res://scenarios/aa_instanced_scenes/FadePanel.tscn" id="3_rrrk8"]
[ext_resource type="PackedScene" uid="uid://d3bii8k8584d" path="res://scenarios/aa_instanced_scenes/TextBox.tscn" id="4_1dxn7"]
[ext_resource type="PackedScene" uid="uid://dna4je6f4puhp" path="res://scenarios/aa_instanced_scenes/Audio.tscn" id="6_iic1m"]

[node name="SideSt" type="TextureRect"]
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
theme = ExtResource("1_8u74k")
texture = ExtResource("2_8owsn")
script = ExtResource("2_qhdan")

[node name="FadePanel" parent="." instance=ExtResource("3_rrrk8")]
visible = false
layout_mode = 0

[node name="TextBox" parent="." instance=ExtResource("4_1dxn7")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1210.0
offset_bottom = 377.0

[node name="Time" type="Label" parent="TextBox"]
layout_mode = 2

[node name="Intro" type="Label" parent="TextBox"]
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
text = "You are in one of Leipzig's well used side streets, connecting the central city with the industrious crafts and guilds, and through to the docks. You make your way toward..."
autowrap_mode = 2

[node name="Options" type="VBoxContainer" parent="TextBox"]
layout_mode = 2

[node name="Inn" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the Gasthaus via the stables and rear entrance."
flat = true
alignment = 0

[node name="Metalworkers" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the metalworking and arms guilds."
flat = true
alignment = 0

[node name="Crafts" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the shops of artisans and craftspeople making specialized goods."
flat = true
alignment = 0

[node name="Physicians" type="Button" parent="TextBox/Options"]
layout_mode = 2
disabled = true
text = "...the shops of prominent physicians and alchemists."
flat = true
alignment = 0

[node name="Docks" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the docks."
flat = true
alignment = 0

[node name="MainSt" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...the main street."
flat = true
alignment = 0

[node name="Outcome" type="Label" parent="TextBox"]
visible = false
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
autowrap_mode = 2

[node name="Audio" parent="." instance=ExtResource("6_iic1m")]

[connection signal="pressed" from="TextBox/Options/Inn" to="." method="_on_inn_pressed"]
[connection signal="pressed" from="TextBox/Options/Metalworkers" to="." method="_on_metalworkers_pressed"]
[connection signal="pressed" from="TextBox/Options/Crafts" to="." method="_on_crafts_pressed"]
[connection signal="pressed" from="TextBox/Options/Physicians" to="." method="_on_physicians_pressed"]
[connection signal="pressed" from="TextBox/Options/Docks" to="." method="_on_docks_pressed"]
[connection signal="pressed" from="TextBox/Options/MainSt" to="." method="_on_main_st_pressed"]
